# cc-statistics

./: .gitignore  CHANGELOG.md  CLAUDE.md  GIT_LOG_FEATURES.md  INSTALL.md  README.md  README_CN.md  README_EN.md  cc-stats-web.sh  pyproject.toml  setup.py  test_git_log_stats.py  test_server.py  使用手册.md  功能点分析.md  安装手册.md
.github/scripts/: pr_review.py
.github/workflows/: build-macos.yml  pr-review.yml  publish.yml
cc_island_ios/: README.md  project.yml
cc_island_ios/App/: BridgeSettingsView.swift  BridgeSyncCoordinator.swift  ClaudeCodeActivityManager.swift  ClaudeCodeIslandApp.swift  IslandDashboardView.swift
cc_island_ios/ClaudeCodeIsland.xcodeproj/: project.pbxproj
cc_island_ios/Config/: ClaudeCodeIsland-Info.plist  ClaudeCodeIslandWidget-Info.plist
cc_island_ios/Intents/: ApprovalIntents.swift
cc_island_ios/Networking/: BridgeClient.swift
cc_island_ios/Shared/: BridgeConfiguration.swift  BridgeModels.swift  ClaudeCodeIslandAttributes.swift  JSONCoder+Bridge.swift
cc_island_ios/Widgets/: ClaudeCodeIslandWidget.swift  (+1 more)
cc_stats/: __init__.py  analyzer.py  cli.py  exporter.py  formatter.py  git_hook.py  hooks.py  notifier.py  parser.py  pricing.py  reporter.py  webhook.py
cc_stats_app/: __main__.py
cc_stats_web/: server.py
docs/: demo.cast  demo_script.sh  git-hook-examples.md  git-hook-usage.md
hooks/: ccstats-hook.js  install.js
scripts/: bridge_seed_events.py  build_wheels.py  extract_clawd_frames.py  gen_clawd_sprites.py  generate_clawd_sprites.py  island_dev_boot.sh
tests/: test_bridge_api_server.py  test_bridge_collector.py  test_bridge_state_store.py  test_codex_parser.py  test_coding_rhythm.py  test_display_width.py  test_git_stats_collector.swift  test_hooks.py  test_notifier.py  test_pricing.py  test_reporter_daily.py  test_session_activity_monitor.swift
(+27 files in other folders)
