[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-statistics"
version = "0.10.0"
description = "Claude Code 会话统计工具 — 分析 AI Coding 工程指标"
requires-python = ">=3.10"
dependencies = []
readme = "README.md"
license = "MIT"
authors = [{name = "androidZzT"}]
keywords = ["claude-code", "statistics", "ai-coding", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/androidZzT/cc-statistics"
Repository = "https://github.com/androidZzT/cc-statistics"

[tool.setuptools.packages.find]
include = ["cc_stats*", "cc_stats_app*", "cc_stats_web*"]

[tool.setuptools.package-data]
cc_stats_app = ["swift/**/*.swift"]
cc_stats_web = ["web/**/*"]

[project.scripts]
cc-stats = "cc_stats.cli:main"
cc-stats-app = "cc_stats_app.__main__:main"
cc-stats-web = "cc_stats_web.__main__:main"
